src/styles/index.css
.tagline {
    position: absolute;
    top: 50vh;
    width: 100%;
    display: block;
    z-index: 5;
    vertical-align: baseline;
    margin-left: 5vw;
    font-size: 34px;
    text-transform: uppercase;
    transform: translateY(-50%);
    text-align: left;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
    color: #F7FDF5;
}

.tagline > a {
    padding-left: 12px;
    padding-right: 12px;
    background-color: rgba(1, 25, 54, 0.3);
    color: #F7FDF5;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
}

#flip {
    height: 50px;
    overflow: hidden;
}

#flip > div > div {
    padding: 0 12px;
    height: 45px;
    margin-bottom: 45px;
    display: inline-block;
    background: rgba(141, 199, 63, 0.5);
}

#flip div:first-child {
    animation: slide 5s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
    animation-fill-mode: both;
    color: #F7FDF5; /* Complementary color to the background */
}

#flip div:first-child div {
    background: rgba(51, 147, 0, 0.5);
    color: #F7FDF5;
}

#flip div:last-child div {
    background: rgba(35, 102, 2, 0.5);
    color: #F7FDF5; /* Complementary color to the background */
}

@keyframes slide {
    0% {
        margin-top: -270px;
    }
    5% {
        margin-top: -180px;
    }
    33% {
        margin-top: -180px;
    }
    38% {
        margin-top: -90px;
    }
    66% {
        margin-top: -90px;
    }
    71% {
        margin-top: 0px;
    }
    99.99% {
        margin-top: 0px;
    }
    100% {
        margin-top: -270px;
    }
}

@media screen and (max-width: 500px) {
    .static {
        height: 50px;
        padding-top: 15px;
    }

    #flip div:first-child {
        padding-top: 10px;
    }

    @keyframes show {
        0% {
            margin-top: -240px;
        }
        5% {
            margin-top: -160px;
        }
        33% {
            margin-top: -160px;
        }
        38% {
            margin-top: -80px;
        }
        66% {
            margin-top: -80px;
        }
        71% {
            margin-top: -5px;
        }
        99.99% {
            margin-top: -5px;
        }
        100% {
            margin-top: -240px;
        }
    }
}

